@@ -1,5 +1,10 @@
 2007-09-18  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-scan.in:
+	  Handle function pointers. Fixes #477532.
+
+2007-09-18  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: David Nečas <yeti@physics.muni.cz>
 
 	* gtkdoc-scan.in:
